fix menu on mobile

--- a/apps/seu-app/src/assets/css/theme-service.scss
+++ b/apps/seu-app/src/assets/css/theme-service.scss
@@ -1500,7 +1500,7 @@ iframe {
 
   .wrapper {
     .header-top {
-      padding-right: 0;
+      padding-right: 0 !important;
     }
 
     .page-wrap {
